--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc -b && vite build",
+    "build": "vue-tsc -b && vite-ssg build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/markdown-it": "^14.1.2",
     "@types/node": "^24.10.1",
+    "@types/twemoji": "^13.1.1",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
     "@vueuse/head": "^2.0.0",
@@ -21,9 +22,11 @@
     "markdown-it": "^14.1.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18",
+    "twemoji": "^14.0.2",
     "typescript": "~5.9.3",
     "vite": "^7.2.4",
     "vite-plugin-sitemap": "^0.8.2",
+    "vite-ssg": "^28.2.2",
     "vue-i18n": "^9.14.5",
     "vue-router": "^4.6.3",
     "vue-tsc": "^3.1.4"
